mail/themes/shared/mail/accountHub.css
/* ... */
.hub-body-grid {
  display: flex;
  gap: 21px;
  flex-wrap: wrap;
  justify-content: center;
}

.button-account {
  inline-size: 170px;
  min-block-size: 93px;
  font-size: 1.2rem;
  font-weight: normal;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 3px;
  margin: 0;
  padding: 12px;
  color: var(--hub-button-color);
  background-color: var(--hub-account-button-background);
  border: 1px solid var(--hub-account-button-border-color);
  box-shadow:
    0 4px 6px -6px rgba(0, 0, 0, 0.3),
    inset 0 0 0 transparent;
}

.button-account:hover {
  color: var(--hub-button-color) !important;
  background-color: var(--hub-account-button-background-hover) !important;
  box-shadow:
    0 8px 12px -8px rgba(0, 0, 0, 0.3),
    inset 0 0 0 transparent;
}

.button-account:hover:active {
  color: var(--hub-button-color) !important;
  background-color: var(--hub-account-button-background-hover-active) !important;
  box-shadow:
    0 0 0 transparent,
    inset 0 4px 6px -2px rgba(0, 0, 0, 0.4);
}

.button-account::before {
  display: block;
  content: "";
  inline-size: 24px;
  block-size: 24px;
  -moz-context-properties: fill, stroke;
  fill: color-mix(in srgb, var(--primary) 10%, transparent);
  stroke: var(--primary);
  background-size: 24px;
  background-repeat: no-repeat;
  background-position: center;
}

#emailButton::before {
  background-image: var(--icon-mail-lg);
}

#newEmailButton::before {
  background-image: var(--icon-new-mail);
}

#calendarButton::before {
  background-image: var(--icon-calendar-lg);
}

#addressBookButton::before {
  background-image: var(--icon-address-book-lg);
}

#chatButton::before {
  background-image: var(--icon-chat-lg);
}

#feedButton::before {
  background-image: var(--icon-rss);
}

#newsgroupButton::before {
  background-image: var(--icon-newsletter);
}

#importButton::before {
  background-image: var(--icon-import-lg);
}

#hubLoader {
  inline-size: 16px;
  min-block-size: 16px;
  vertical-align: middle;
  content: url("chrome://messenger/skin/icons/spinning.svg");
  -moz-context-properties: fill;
  fill: var(--selected-item-color);
}

#hubSyncButton {
  align-self: center;
  position: relative;
  padding: 9px 12px;
  font-weight: normal;
  font-size: 1.2rem;
  line-height: 1;
  border: none;
  color: var(--hub-button-color);
  background-color: var(--hub-button-background);
}

#hubSyncButton:hover {
  color: var(--hub-button-color);
  background-color: var(--hub-account-button-background-hover);
}

#hubSyncButton::before {
  content: var(--icon-account-sync);
  display: inline-block;
  margin-inline-end: 12px;
  vertical-align: middle;
}

#hubSyncButton::after {
  content: "";
  position: absolute;
  background: var(--color-blue-50);
  background-image: linear-gradient(127deg, var(--color-teal-50), var(--color-magenta-50));
  inset: -2px;
  border-radius: 8px;
  filter: blur(10px);
  opacity: 0.6;
  z-index: -1;
  transform: scale(0.95) translateY(5px);
}

#hubSyncButton:hover::after {
  transform: scale(0.85) translateY(8px);
  filter: blur(15px);
}

#hubSyncButton:hover:active::after {
  transform: scale(1) translateY(0);
  filter: blur(3px);
}

.button {
  &.button-sm {
    padding: 4px 9px;
    font-size: 0.8rem;
    min-inline-size: auto;
    min-block-size: auto;
    text-transform: uppercase;
    font-weight: bold;
    line-height: var(--hub-floating-button-line-height);
  }

  &.secondary-button {
    background-color: var(--hub-account-secondary-button-background);
    color: var(--hub-account-secondary-button-color);
    border-color: var(--hub-account-secondary-button-border);
    box-shadow: 0 6px 3px -4px rgba(0, 0, 0, 0.1);
    margin-inline-end: 15px;

    &:hover {
      background-color: var(--hub-account-secondary-button-background-hover);
      color: var(--hub-account-secondary-button-color);
      border-color: var(--hub-account-secondary-button-border);
      box-shadow: 0 4px 2px -3px rgba(0, 0, 0, 0.1);

      &:active {
        background-color: var(--hub-account-secondary-button-background-active);
        color: var(--hub-account-secondary-button-color);
        border-color: var(--hub-account-secondary-button-border-active);
        box-shadow: none;
      }
    }

    &:active {
      background-color: var(--hub-account-secondary-button-background-active);
      color: var(--hub-account-secondary-button-color);
      border-color: var(--hub-account-secondary-button-border-active);
      box-shadow: none;
    }

    &:focus-visible {
      outline: var(--focus-outline);
      outline-offset: var(--focus-outline-offset);
    }
  }
}

.account-hub-form-small-comment {
  display: inline-block;
  font-size: 0.77rem;
  color: var(--color-text-muted);
  margin-block-end: 1rem;
}

/* Footer */

.hub-footer {
  grid-area: footer;

  & .center-column {
    justify-content: center;
  }

  & hr {
    border: none;
    block-size: 1px;
    margin-block-start: var(--hub-footer-margin-block);
    background: linear-gradient(to right, transparent, var(--color-surface-border), transparent);
    color: transparent;
  }

  & .footer-button {
    font-size: 1.1rem;
    min-inline-size: 128px;
    padding: 10px 25px;
    text-align: center;
  }

  .busy & {
    z-index: 3;
  }
}

.footer-links {
  display: flex;
  flex-wrap: wrap;
  gap: 3px 9px;
  justify-content: center;
  align-items: center;
  margin-block: var(--hub-footer-margin-block);

  & li {
    display: flex;
    align-items: center;
    gap: 9px;

    &:not([hidden]) ~ li:not([hidden])::before {
      content: "";
      inline-size: 2px;
      block-size: 2px;
      border-radius: 2px;
      background-color: var(--color-text-muted);
    }
  }

  & li > a {
    font-size: 1.1rem;
    text-decoration: none;
    letter-spacing: 0.2px;
    font-weight: 300;
    color: var(--link-color);

    &:hover {
      text-decoration: underline;
    }
  }
}
/* ... */

