Bug 2045135 - Account Hub: Helper text font size too small. r=aleca
Due to design updates, the font size for the helper text was no longer correct.

Differential Revision: https://phabricator.services.mozilla.com/D304909

--HG--
extra : amend_source : afeacda15c99422400ceb2a66ffe931d613c9375

--- a/mail/themes/shared/mail/accountHub.css
+++ b/mail/themes/shared/mail/accountHub.css
@@ -761,7 +761,7 @@ header {
 
 .account-hub-form-small-comment {
   display: inline-block;
-  font-size: 0.77rem;
+  font-size: 0.85rem;
   color: var(--color-text-muted);
   margin-block-end: 1rem;
 }
